--- a/code_for_bootstrap_practice/code_for_bootstrap_practice/index_for_student.html
+++ b/code_for_bootstrap_practice/code_for_bootstrap_practice/index_for_student.html
@@ -17,28 +17,27 @@
   </head>
   <body>
     <main>
-      <!-- ************************************************ カールセル開始 -->
-      <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel"> -->
-      <div id="myCarousel" class="" data-bs-ride="">
-        <!-- <div class="carousel-inner"> -->
-        <div class="">
-          <!-- <div class="carousel-item active"> -->
-          <div class="">
-            <img src="img/top_1.jpg" alt="サンプル画像1">
-            <div class="container">
-              <!-- <div class="carousel-caption"> -->
-              <div class="">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                  metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
-                <p><a class="" href="#" role="button">Sign up today</a></p>
-              </div>
+        <!-- カールセル開始 -->
+    <!-- carousel クラス と slide クラスを適用します-->
+   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+  
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/top_1.jpg" alt="サンプル画像1">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
       </div>
-      <!-- ************************************************ カールセル終了 -->
+    </div>
+    <!-- カールセル終了 -->
+
+
       <!-- <div class="container marketing"> -->
       <div class="">
         <!-- <div class="row"> -->
