--- a/kadai_003/index_for_student.html
+++ b/kadai_003/index_for_student.html
@@ -33,6 +33,27 @@
             </div>
           </div>
         </div>
+
+        <!-- 追加コード -->
+        <div class="carousel-item">
+          <img src="img/top_2.jpg" alt="サンプル画像2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>xample headline.</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+              metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/top_3.jpg" alt="サンプル画像3">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>xample headline.</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+              metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+      <!-- 追加コードここまで -->
+
       </div>
     </div>
     <!-- カールセル終了 -->
