--- a/kadai_004/index_for_student.html
+++ b/kadai_004/index_for_student.html
@@ -67,7 +67,19 @@
       <button class="btn btn-primary btn-lg shadow">ここを押す</button>
       <div class="button-test">ここを押す</div>
       <a href="" class="btn btn-info btn-sm shadow">ここを押す</a>
-
+      
+      <!-- ここから追加部分 -->      
+      <button class="btn btn-primary btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-secondary btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-success btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-danger btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-warning btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-info btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-light btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-dark btn-lg shadow">ここを押す</button>
+      <button class="btn btn-secondary">ここを押す</button>
+      <button class="btn btn-success">ここを押す</button>
+      <!-- ここまで -->
     </div>
 
 
