--- a/code_for_bootstrap_practice/index_for_student.html
+++ b/code_for_bootstrap_practice/index_for_student.html
@@ -111,46 +111,46 @@
 
     </div>
 
+    <!-- これ以前のコードは編集しないため省略しています -->
 
-      <!-- <div class="container marketing"> -->
-      <div class="">
-        <!-- <div class="row"> -->
-        <div class="">
-          <!-- <div class="col-lg-4"> -->
-          <div class="">
-            <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-              vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
-              magna.</p>
-            <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-            <p><a class="" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-        <hr class="featurette-divider">
-        <!-- <div class="row"> -->
-        <div class="">
-          <!-- <div class="col-md-7"> -->
-          <div class="">
-            <!-- <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow yourmind.</span> -->
-            <h2 class="featurette-heading">First featurette heading. <span class="">It’ll blow yourmind.</span></h2>
-            <!-- <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-              euismod
-              semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.</p> -->
-            <p class="">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-              euismod
-              semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
-          <!-- <div class="col-md-5"> -->
-          <div class="">
-            <!-- <img src="img/sushi.jpg" class="img-fluid" alt=""> -->
-            <img src="img/sushi.jpg" class="" alt="サンプル画像3">
-          </div>
-        </div>
+<hr class="featurette-divider" />
+
+<!-- <div class="row"> -->
+<div class="row">
+
+  <!-- <div class="col-md-7"> -->
+ <!-- 左側7/12の部分 -->
+ <div class="col-md-7">
+
+    <!-- <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span> -->
+    <h2 class="featurette-heading">
+      First featurette heading.
+      <span class="text-muted">It'll blow your mind.</span>
+    </h2>
+    <!-- <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+      euismod
+      semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+      commodo.</p> -->
+
+    <p class="lead">
+      Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+      ligula porta felis euismod semper. Praesent commodo cursus magna,
+      vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+      commodo.
+    </p>
+  </div>
+  <!-- <div class="col-md-5"> -->
+
+ <!-- 右側5/12の部分 -->
+ <div class="col-md-5">
+
+  <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+  </div>
+</div>
+
+<!-- これ以後のコードは編集しないため省略しています -->
+
+    
         <hr class="featurette-divider">
         <!-- ここにもう一つ左右を反転させたものを作ります。 -->
         <hr class="featurette-divider">
