--- a/code_for_bootstrap_practice/index_for_student.html
+++ b/code_for_bootstrap_practice/index_for_student.html
@@ -118,16 +118,13 @@
 <!-- <div class="row"> -->
 <div class="row">
 
-  <!-- <div class="col-md-7"> -->
- <!-- 左側7/12の部分 -->
- <div class="col-md-7">
+  <div class="col-md-7">
 
-    <!-- <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span> -->
-    <h2 class="featurette-heading">
-      First featurette heading.
-      <span class="text-muted">It'll blow your mind.</span>
-    </h2>
-    <!-- <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+      <h2 class="fs-1 mt-5">First featurette heading. </h2>
+
+      <p class="fs-2">It'll blow your mind.</p>
+
+      <!-- <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
       euismod
       semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
       commodo.</p> -->
@@ -151,11 +148,54 @@
 <!-- これ以後のコードは編集しないため省略しています -->
 
     
-        <hr class="featurette-divider">
+<hr class="featurette-divider" />
+
+
+      <!-- ここにもう1つ左右を反転させたものを作ります。 -->
+      <div class="row featurette">
+            <!-- 画像部分 -->
+            <div class="col-md-5">
+            <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3" />
+      </div>
+
+             <!-- 文字部分 -->
+    <div class="col-md-7">
+      <h2 class="fs-1 mt-5">First featurette heading.</h2>
+      <p class="fs-2">It'll blow your mind.</p>
+      <p class="lead">
+        Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+        ligula porta felis euismod semper. Praesent commodo cursus magna,
+        vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+        commodo.
+      </p>
+    </div>
+  </div>
+
         <!-- ここにもう一つ左右を反転させたものを作ります。 -->
-        <hr class="featurette-divider">
-        <!-- ここにもう一つ左右を反転させたものを作ります。 -->
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" />
+
+        <!-- ここにもう1つ左右を反転させたものを作ります。 -->
+        <div class="row">
+          <!-- 文字部分 -->
+          <div class="col-md-7">
+            <h2 class="fs-1 mt-5">First featurette heading.</h2>
+            <p class="fs-2">It'll blow your mind.</p>
+            <p class="lead">
+              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+              ligula porta felis euismod semper. Praesent commodo cursus magna,
+              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+              commodo.
+            </p>
+          </div>
+      
+          <!-- 画像部分 -->
+          <div class="col-md-5">
+            <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3" />
+          </div>
+        </div>
+      </div>
+
+
         <footer class="container">
           <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
           <p class=""><a href="#">Back to top</a></p>
