課題6に向けて微修正

--- a/code_for_bootstrap_practice/index_for_student.html
+++ b/code_for_bootstrap_practice/index_for_student.html
@@ -39,7 +39,6 @@
       <!-- カールセル終了 -->
       <!-- ケーキ -->
 
-      <div class="container">
        <div class="container">
           <div class="row">
 
@@ -83,7 +82,6 @@
             </div>
           </div>
         </div>
-      </div>
 
       <!-- これ以前のコードは編集しないため省略しています -->
       <!-- カリフォルニアロール-->
@@ -161,15 +159,11 @@
           </div>
         </div>
       
-      <!-- 1つ、謎の</div>が残ってる -->
-      </div>
-
-
+      <hr class="featurette-divider">
         <footer class="container">
           <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
           <p class=""><a href="#">Back to top</a></p>
         </footer>
-      </div>
     </main>
   </body>
 
