</div>の位置に迷った

--- a/code_for_bootstrap_practice/index_for_student.html
+++ b/code_for_bootstrap_practice/index_for_student.html
@@ -39,7 +39,7 @@
       <!-- カールセル終了 -->
       <!-- ケーキ -->
 
-       <div class="container">
+        <div class="container">
           <div class="row">
 
             <div class="col-md-4 text-center">
@@ -81,7 +81,6 @@
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
             </div>
           </div>
-        </div>
 
       <!-- これ以前のコードは編集しないため省略しています -->
       <!-- カリフォルニアロール-->
@@ -164,6 +163,8 @@
           <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
           <p class=""><a href="#">Back to top</a></p>
         </footer>
+      <!-- なんでこの</div>を上の方ではなく、ここに置くのかわかっていない -->
+      </div>
     </main>
   </body>
 
