--- a/kadai_006/index_for_student.html
+++ b/kadai_006/index_for_student.html
@@ -39,7 +39,6 @@
       <!-- カールセル終了 -->
       <!-- ケーキ -->
 
-      /======== 前略 ========/
       <div class="container marketing">
         <div class="row">
           <div class="col-lg-4">
@@ -57,64 +56,55 @@
  
  <!-- ここからコードを変更しカードデザインに変更してください -->
         <hr class="featurette-divider">
-        <div class="row">
-          <!-- 左側7/12の部分 -->
-          <div class="col-md-7">
-            <h2 class="fs-1 mt-5">First featurette heading. </h2>
-            <p class="fs-2">It'll blow your mind.</p>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-              euismod
-              semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.</p>
+        <div class="row row-cols-4">
+          <div class="col">
+            <div class="card">
+              <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+              <div class="card-body">
+                <h2 class="fs-1">First featurette heading. </h2>
+                <p class="fs-2">It'll blow your mind.</p>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              </div>
+            </div>
           </div>
- 
-          <!-- 右側5/12の部分 -->
-          <div class="col-md-5">
-            <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+
+          <div class="col">
+            <div class="card">
+              <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+              <div class="card-body">
+                <h2 class="fs-1">First featurette heading. </h2>
+                <p class="fs-2">It'll blow your mind.</p>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              </div>
+            </div>
           </div>
-        </div>
- 
-        <hr class="featurette-divider">
-        <!-- ここにもう一つ左右を反転させたものを作ります。 -->
-        <div class="row featurette">
-          <!-- 画像部分 -->
-          <div class="col-md-5">
-            <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3" />
+
+          <div class="col">
+            <div class="card">
+              <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+              <div class="card-body">
+                <h2 class="fs-1">First featurette heading. </h2>
+                <p class="fs-2">It'll blow your mind.</p>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              </div>
+            </div>
           </div>
-          <!-- 文字部分 -->
-          <div class="col-md-7">
-            <h2 class="fs-1 mt-5">First featurette heading.</h2>
-            <p class="fs-2">It'll blow your mind.</p>
-            <p class="lead">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-              ligula porta felis euismod semper. Praesent commodo cursus magna,
-              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
-        </div>
- 
-        <hr class="featurette-divider">
-        <!-- ここにもう一つ左右を反転させたものを作ります。 -->
-        <div class="row">
-          <!-- 文字部分 -->
-          <div class="col-md-7">
-            <h2 class="fs-1 mt-5">First featurette heading.</h2>
-            <p class="fs-2">It'll blow your mind.</p>
-            <p class="lead">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-              ligula porta felis euismod semper. Praesent commodo cursus magna,
-              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
- 
-          <!-- 画像部分 -->
-          <div class="col-md-5">
-            <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3" />
+
+          <div class="col">
+            <div class="card">
+              <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
+              <div class="card-body">
+                <h2 class="fs-1">First featurette heading. </h2>
+                <p class="fs-2">It'll blow your mind.</p>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              </div>
+            </div>
           </div>
         </div>
- <!-- ここまで -->
+
+
+
+          <!-- ここまで -->
        <!-- お寿司部分終了 -->
  
  
@@ -123,7 +113,6 @@
           <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
           <p class=""><a href="#">Back to top</a></p>
         </footer>
-      </div>
     </main>
   </body>
 
