--- a/kadai_tutorial_output/index.html
+++ b/kadai_tutorial_output/index.html
@@ -3,14 +3,18 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- マルチデバイス対応 -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="SAMURAI ENGINEER">
   <title>SAMURAI XD_HTML教材</title>
+  <!-- 先にBootstrapのCSSを読み込む -->
   <!-- ************************************************ bootstrap.min.cssの読み込み -->
+  <!-- BootstrapのCSSの読み込み -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <!-- ************************************************ bootstrap.bundle.min.jsの読み込み -->
+  <!-- BootstrapのJavaScriptライブラリの読み込み -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer>
   </script>
@@ -22,6 +26,7 @@
   <!-- ************************************************ Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <!-- Bootstrapの読み込みのlinkタグよりも後ろに、style.cssを読み込むlinkタグを記述する -->
   <!-- ************************************************今回作成する styles.cssの読み込み -->
   <link href="stylesheet/style.css" rel="stylesheet">
   <!-- ************************************************  -->
