--- a/kadai_tutorial_output/index.html
+++ b/kadai_tutorial_output/index.html
@@ -35,7 +35,55 @@
 <body>
   <main>
     <!-- ************************************************ ナビゲーションバー開始 -->
-
+    <!-- ナビゲーションバー開始 -->
+    <nav class="navbar navbar-expand-lg"><!-- 親 -->
+      <div class="container"><!-- 子 -->
+        <!-- サイトロゴ(孫1) 一番左すべて-->
+        <a class="navbar-brand my_navbar_brand">
+          <img class="img-fluid navbar_brand_logo" src="img/site_logo.png" alt="サイトアイコン"><span>SAMURAI KITCHEN</span>
+        </a>
+        
+        <!-- ハンバーガボタン(孫2) iphoneの幅での一番右のメニュー達、つまりハンバーガボタン-->
+        <div class="navbar-toggler hamburger_menu" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <input type="checkbox" id="hamburger_btn_check">
+          <label for="hamburger_btn_check" class="hamburger_btn">
+            <img class="btn_open" src="img/button_open.png" alt="ナビゲーションバーのボタン">
+            <img class="btn_close" src="img/button_close.png" alt="ナビゲーションバーのボタン">
+          </label>
+        </div>
+         <!-- メニュー部分(孫3) PCの幅での一番右のメニュー達-->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" aria-current="page" href="#">HOME</a>
+            </li>
+ 
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" href="#about">ABOUT US</a>
+            </li>
+ 
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" href="#gallery">GALLERY</a>
+            </li>
+ 
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" href="#menu">MENU</a>
+            </li>
+ 
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" href="#review">CUSTOMER REVIEWS</a>
+            </li>
+ 
+            <li class="nav-item px-2">
+              <a class="nav-link my_nav_link my-2" href="#access">ACCESS</a>
+            </li>
+              
+          </ul>
+        </div>
+      </div>
+    </nav>
+ <!-- ナビゲーションバー終了 -->
     <!-- ************************************************ ナビゲーションバー終了 -->
 
     <!-- ************************************************ カルーセル開始 -->
