--- a/kadai_015/index.html
+++ b/kadai_015/index.html
@@ -13,7 +13,7 @@
   <!-- ************************************************ bootstrap.bundle.min.jsの読み込み -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer>
-  </script>
+    </script>
 
   <!-- ************************************************ Google Font読み込み -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -124,7 +124,7 @@
     <!-- ************************************************ カルーセル終了 -->
 
     <!-- ************************************************ アバウトセクション開始 -->
-    <section class="about_us_bg" id="about">
+    <section class="chef_bg" id="about">
       <div class="container py-5 mb-5">
         <div class="row">
           <div class="col-lg-6 text-left">
@@ -402,7 +402,34 @@
       </div>
     </section>
     <!-- ************************************************ アクセスセクション終了 -->
-
+    <!-- ************************************************ シェフセクション開始 -->
+    <section class="chef_bg" id="chef">
+      <div class="container py-5 mb-5">
+        <div class="row">
+          <div class="col-lg-6 text-left">
+            <div class="py-5">
+              <h2 class="section_title chef mb-5">
+                CHEF
+              </h2>
+              <h3>
+                レオナルド
+              </h3>
+              <br>
+              <p class="mb-2">
+                イタリア・ラツィオ州ローマ県ローマ出身。 <br>
+                イタリア料理の発展・普及、料理人の育成など、料理を通した社会貢献を行っている。<br>
+                得意料理はローマとカラブリア州郷土料理を中心とした真のお洒落でシンプルなイタリア料理。<br>
+                料理イベント、広告、雑誌でも活躍中。
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img src="img/chef.jpg" class="img-fluid" alt="chef">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ************************************************ シェフセクション終了 -->
 
     <!-- ************************************************ フッター開始 -->
     <footer id="footer">
